# felis

./: .gitignore  CNAME  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/: 404.html  contact_us.md  index.html  index.md  sitemap.xml
docs/about_api_providers/: the_api.md  the_local_provider.md
docs/backends/: about_backends.md  logical_physical.md  set_parameters.md
docs/backends/about_backends/: index.html
docs/contact_us/: index.html
docs/felis_cloud/: about_felis_cloud.md  connect_to_felis_cloud.md  hardware_availability_schedule.md  run_multiple_circuits.md
docs/getting_started/: a_first_example.md  faq.md  hardware_availability_schedule.md  install_the_qiskit_provider.md  logical_example.md  physical_example.md  sample_notebooks.md  why_cat_qubits.md  working_with_cat_qubits.md
docs/going_further/: backends.md  run_multiple_circuits.md  sample_notebooks.md  supported_instructions.md
docs/overrides/: home.html  main.html
docs/reference/: about_the_provider.md  boson_4_chips.md  changelog.md  error_models.md  faq.md  papers.md  supported_instructions.md  the_api.md
docs/search/: search_index.json
docs/stylesheets/: extra.css  home.css
old/: the_local_provider.md
samples/: An introduction to cat qubits.ipynb  README.md  index.html  requirements.txt
samples/1_hardware_experiments/: 1 - Bit-flip and phase-flip scaling on a physical qubit.ipynb  2 - Boson 4 tutorial.ipynb  3 - Z gate oscillations on a physical qubit.ipynb  4 - Error detection on physical qubits.ipynb
(+39 files in other folders)
