[project]
name = "felis"
version = "1.2.0"
description = "Felis documentation and samples"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "matplotlib>=3.9,<3.10",                 # Python 3.9 support has been dropped from 3.10+
    "pylatexenc>=2.10,<2.11",
    "qiskit-algorithms>=0.3.1,<0.4",
    "qiskit-alice-bob-provider>=1.2.0,<1.3",
    "qrisp>=0.5.4,<0.6",
    "scikit-learn>=1.6.1,<1.7",
    "tqdm>=4.67.1,<4.68",
    "tweedledum",
]

[dependency-groups]
jupyter = ["jupyterlab>=4.3.6,<4.4"]
kernel = ["ipykernel>=6.29.5,<6.30.0"]
docs = ["mkdocs-material>=9.6.11"]
dev = ["jupyterlab>=4.3.6,<4.4", "mkdocs-material>=9.6.11"]

[tool.uv.sources]
tweedledum = { git = "https://github.com/Alice-Bob-SW/tweedledum", rev = "1.1.2-ab.2" }

[tool.uv]
default-groups = []
